force-app/main/default/objects/npsp__Opportunity_Naming_Settings__c/fields/npsp__Opportunity_Name_Format__c.field-meta.xml
<CustomField>
    <fullName>npsp__Opportunity_Name_Format__c</fullName>
    <description>The format to use for Opportunity naming.</description>
    <inlineHelpText>The format to use for Opportunity naming.</inlineHelpText>
    <label>Opportunity Name Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>