force-app/main/default/objects/npsp__Opportunity_Naming_Settings__c/fields/npsp__Opportunity_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>npsp__Opportunity_Record_Types__c</fullName>
    <description>Specifies the opportunity record type that this naming scheme is for.</description>
    <inlineHelpText>Specifies the opportunity record type that this naming scheme is for.</inlineHelpText>
    <label>Opportunity Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>